# mandelbrot

./: mandelbrot.py  pyproject.toml  readme.md
